# mkmsbr

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs
blobs-prebuilt/: README.md
boot-asm/: Makefile  README.md  fake_bootmgr.asm  fake_pbr.asm  fat32_pbr.asm  fat32_pbr_bootmgr.asm  fat32_pbr_ntldr.asm  mbr.asm  mbr_win7.asm  mbr_xp.asm  ntfs_pbr.asm  wipe_bootsect.asm  xp_setup_chain_bootsect.asm
boot-asm/fat32_pbr_bootmgr/: sector0.asm  sector1.asm
boot-asm/fat32_pbr_ntldr/: sector0.asm  sector1.asm
boot-asm/ntfs_pbr_bootmgr/: sector0.asm  sector1.asm
docs/: BACKLOG.md  BOOTSMITH_NTLDR_FINDINGS_2026_05_19.md  L4_INVESTIGATION.md  PROVENANCE.md  SPEC.md  USBWIN_NTLDR_FINDINGS_2026_05_19.md  XP_INT13_DRIVE_SWAP_SPEC.md  XP_SETUP_CHAIN_BOOTSECT_SPEC.md
docs/homebrew/: README.md
scripts/: build_l3_fixtures.sh  clean_room_check.sh
src/: blobs.rs  lib.rs  mbr.rs  pbr.rs
tests/: README.md  byte_diff_vs_mssys.rs  layer1_oracle.rs  qemu_mbr.rs  qemu_ntfs_pbr.rs  qemu_pbr.rs  qemu_pbr_real.rs
tests/common/: mod.rs  ntfs_image.rs  oracle.rs  qemu_trace.rs
tests/real_content/: .gitignore  MANIFEST.md
