[package]
name = "mkmsbr"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "MIT"
repository = "https://github.com/jma24/mkmsbr"
authors = ["John Appleby <johnmichaelappleby@gmail.com>"]
description = "Clean-room library + CLI for Microsoft-compatible MBR and FAT32/NTFS boot records."
build = "build.rs"

[lib]
name = "mkmsbr"
path = "src/lib.rs"

[features]
# When set, build.rs invokes NASM to compile boot-asm/*.asm into 512-byte
# binaries that get include_bytes!'d. Without the feature, the embedded
# blobs are empty placeholders and any code path that consumes them
# surfaces a clear runtime error.
embed-boot-asm = []

# Gates the byte-equality test vs ms-sys reference blobs. Requires
# MKMSBR_MSSYS_BLOBS_DIR env var pointing at a local ms-sys checkout.
compare-mssys = []

[dependencies]
thiserror = "1"
